Actions
Bug #5302
closedTwo small documentation fixes in dir.c
Bug #5302:
Two small documentation fixes in dir.c
Description
There are two cases where </code> ends up rendering (via rdoc) into html as "<code></code>" when it should just be ""
I found that adding a space around the backslash was a simple fix to the problem (escaping it didn't seem to make a difference.)
Files
Updated by ayumin (Ayumu AIZAWA) over 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r33244.
Aaron, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- dir.c: Two small documentation fixes. [Bug #5302]
Actions