* dir.c: Two small documentation fixes. [Bug #5302]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33244 b2dd03c8-39d4-4d8f-98ff-823fe69b080e